// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Printer printCode() returns a Markdown codeblock with non supported message for unsupported type 1`] = `
"
\`\`\`graphql
"TestFooBarType" not supported
\`\`\`
"
`;

exports[`Printer printCode() returns a Markdown graphql codeblock with type Directive 1`] = `
"
\`\`\`graphql
directive @TestDirective
\`\`\`
"
`;

exports[`Printer printCode() returns a Markdown graphql codeblock with type Enum 1`] = `
"
\`\`\`graphql
enum TestEnum {

}
\`\`\`
"
`;

exports[`Printer printCode() returns a Markdown graphql codeblock with type Input 1`] = `
"
\`\`\`graphql
input TestInput {
}
\`\`\`
"
`;

exports[`Printer printCode() returns a Markdown graphql codeblock with type Interface 1`] = `
"
\`\`\`graphql
interface TestInterface {
}
\`\`\`
"
`;

exports[`Printer printCode() returns a Markdown graphql codeblock with type Object 1`] = `
"
\`\`\`graphql
type TestObject {
}
\`\`\`
"
`;

exports[`Printer printCode() returns a Markdown graphql codeblock with type Query 1`] = `
"
\`\`\`graphql
TestQuery: ID
\`\`\`
"
`;

exports[`Printer printCode() returns a Markdown graphql codeblock with type Scalar 1`] = `
"
\`\`\`graphql
scalar TestScalar
\`\`\`
"
`;

exports[`Printer printCode() returns a Markdown graphql codeblock with type Union 1`] = `
"
\`\`\`graphql
union TestUnion =
\`\`\`
"
`;
